--- a/index.html
+++ b/index.html
@@ -731,8 +731,34 @@
                         </div>
                         <div class="blog-content">
 
-                            <p class="text">Baily Group Of Industries</p>
-                            <a class="more" href="https://www.balygroupbd.com/" target="_blank">View Live<i
+                            <p class="text">Fish Keepers</p>
+                            <a class="more" href="https://fishkeepers.com.bd/" target="_blank">View Live<i
+                                    class="lni-chevron-right"></i></a>
+                        </div>
+                    </div> <!-- single blog -->
+                </div>
+                <div class="col-lg-4 col-md-7">
+                    <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <div class="blog-image">
+                            <img src="assets/portfolio/baly group.png" height="260" width="370">
+                        </div>
+                        <div class="blog-content">
+
+                            <p class="text">Fish Keepers</p>
+                            <a class="more" href="https://fishkeepers.com.bd/" target="_blank">View Live<i
+                                    class="lni-chevron-right"></i></a>
+                        </div>
+                    </div> <!-- single blog -->
+                </div>
+                <div class="col-lg-4 col-md-7">
+                    <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <div class="blog-image">
+                            <img src="assets/portfolio/baly group.png" height="260" width="370">
+                        </div>
+                        <div class="blog-content">
+
+                            <p class="text">Western Facilities Pty Ltd</p>
+                            <a class="more" href="https://westernfacilities.com.au/" target="_blank">View Live<i
                                     class="lni-chevron-right"></i></a>
                         </div>
                     </div> <!-- single blog -->
