fishkeeper & Western Added

--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
                         <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.5s">
                             <img src="assets/logo/VC.jpg" alt="brand">
                         </div>
+                        <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.5s">
+                            <img src="assets/logo/western_facilities.png" alt="brand">
+                        </div>
+                        <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.5s">
+                            <img src="assets/logo/fish_keepers.png" alt="brand">
+                        </div>
                         <div class="single-logo mt-30 wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.4s">
                             <img src="assets/logo/straitsvisionlogo.png" alt="brand">
                         </div> <!-- single logo -->
@@ -727,7 +733,7 @@
                 <div class="col-lg-4 col-md-7">
                     <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="blog-image">
-                            <img src="assets/portfolio/baly group.png" height="260" width="370">
+                            <img src="assets/portfolio/fishkeepers.png" height="260" width="370">
                         </div>
                         <div class="blog-content">
 
@@ -740,7 +746,7 @@
                 <div class="col-lg-4 col-md-7">
                     <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="blog-image">
-                            <img src="assets/portfolio/baly group.png" height="260" width="370">
+                            <img src="assets/portfolio/western-facilities.png" height="260" width="370">
                         </div>
                         <div class="blog-content">
 
@@ -776,8 +782,19 @@
                         </div>
                     </div> <!-- single blog -->
                 </div>
+                <div class="col-lg-4 col-md-7">
+                    <div class="single-blog mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+                        <div class="blog-image">
+                            <img src="assets/portfolio/baly group.png" height="260" width="370">
+                        </div>
+                        <div class="blog-content">
 
-
+                            <p class="text">Baily Group Of Industries</p>
+                            <a class="more" href="https://www.balygroupbd.com/" target="_blank">View Live<i
+                                    class="lni-chevron-right"></i></a>
+                        </div>
+                    </div> <!-- single blog -->
+                </div>
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
